# Empirical_Engine

./: .gitignore  .travis.yml  CHANGELOG.md  Jenkinsfile  README.md  calculate_empirical.py  classdef.py  emp_aggregation.py  empirical_factory.py  model_config.yaml  pyproject.toml  requirements.txt  setup.py
GMM_models/: classdef.py  (+5 more)
oq_wrapper/: CHANGELOG.md  constants.py  estimations.py  pyproject.toml  requirements.txt  types.py  wrapper.py  xarray.py
oq_wrapper/examples/: run_emp_gmm.py
oq_wrapper/oq_wrapper/: __init__.py  constants.py  estimations.py  ga11_vertical_spectra.py  utils.py  wrapper.py
oq_wrapper/oq_wrapper/examples/: run_emp_gmm.py  run_emp_gmm_logic_tree.py  run_emp_gmm_lt.py
oq_wrapper/oq_wrapper/gmm_logic_tree_configs/: nhm_2010_bb_config.yaml  nhm_2010_bb_gmm_logic_tree.yaml  nshm_2022_config.yaml
oq_wrapper/oq_wrapper/gmm_lt_configs/: nshm_2022_gmm_lt_config.yaml
oq_wrapper/scripts/one_offs/: README.txt
oq_wrapper/tests/: test_gmm_benchmark.py
oq_wrapper/tests/benchmark_data/: generate_benchmark_outputs.py
oq_wrapper/tests/benchmark_data/data/PGA/: AG_20_TectType_SUBDUCTION_SLAB.parquet  A_18_TectType_SUBDUCTION_INTERFACE.parquet  A_22_TectType_ACTIVE_SHALLOW.parquet  A_22_TectType_SUBDUCTION_INTERFACE.parquet  BCH_16_TectType_SUBDUCTION_SLAB.parquet  Br_13_TectType_ACTIVE_SHALLOW.parquet  CB_14_TectType_VOLCANIC.parquet  K_20_NZ_TectType_SUBDUCTION_INTERFACE.parquet  K_20_TectType_SUBDUCTION_SLAB.parquet  NHM2010_BB_TectType_ACTIVE_SHALLOW.parquet  NHM2010_BB_TectType_SUBDUCTION_INTERFACE.parquet  NHM2010_BB_TectType_SUBDUCTION_SLAB.parquet  NHM2010_BB_TectType_VOLCANIC.parquet  P_21_TectType_SUBDUCTION_INTERFACE.parquet  S_22_TectType_ACTIVE_SHALLOW.parquet  ZA_06_TectType_ACTIVE_SHALLOW.parquet  ZA_06_TectType_SUBDUCTION_SLAB.parquet
oq_wrapper/tests/benchmark_data/data/PGV/: ASK_14_TectType_VOLCANIC.parquet  BSSA_14_TectType_ACTIVE_SHALLOW.parquet  CB_10_TectType_ACTIVE_SHALLOW.parquet  CB_14_TectType_ACTIVE_SHALLOW.parquet  CY_14_TectType_VOLCANIC.parquet  K_20_NZ_TectType_SUBDUCTION_SLAB.parquet  K_20_TectType_SUBDUCTION_INTERFACE.parquet  K_20_TectType_SUBDUCTION_SLAB.parquet  NHM2010_BB_TectType_ACTIVE_SHALLOW.parquet  (+2 more)
(+248 files in other folders)
